--- a/public/css/style.css
+++ b/public/css/style.css
@@ -401,6 +401,7 @@ a.logo {
 }
 .navbar-nav>li.btn-bt{
     line-height: 20px;
+    padding-top: 10px;
 }
 .navbar-inverse .navbar-nav>li>a:hover{
     background: rgba(9, 29, 49, 0.8);
@@ -411,6 +412,7 @@ a.logo {
 a.logo {
     font-size: 43px;
     color: #fff !important;
+    font-weight: 800;
     font-family: monospace;
 }
 .jeducation{
@@ -493,13 +495,6 @@ img { max-width: 100%; }
 
 /***** Top menu *****/
 
-.navbar {
-    background: #333;
-    background: rgba(51, 51, 51, 0.3);
-    border: 0;
-    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
-}
-.navbar.navbar-no-bg { background: none; }
 
 
 
@@ -589,19 +584,7 @@ img { max-width: 100%; }
 
 @media (min-width: 768px) and (max-width: 991px) {}
 
-@media (max-width: 767px) {
 
-    .navbar { padding-top: 0; }
-    .navbar.navbar-no-bg { background: #333; background: rgba(51, 51, 51, 0.9); }
-    .navbar-brand { height: 60px; margin-left: 15px; }
-    .navbar-collapse { border: 0; }
-    .navbar-toggle { margin-top: 12px; }
-
-    .inner-bg { padding: 40px 0 110px 0; }
-    .top-content .top-big-link { margin-top: 25px; }
-    .top-content .top-big-link a.btn { margin-top: 10px; }
-
-}
 
 @media (max-width: 415px) {
 
@@ -612,20 +595,12 @@ img { max-width: 100%; }
 
 /* Retina-ize images/icons */
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
 
-    /* logo */
-    .navbar-brand {
-        background-image: url(../img/logo@2x.png) !important; background-repeat: no-repeat !important; background-size: 113px 32px !important;
-    }
-
-}
 .jcontact{
     background: url(../img/1.jpg);
+}
+.btn-white {
+    background: #fff;
+    color: #3c3c3c !important;
+    border-color: #fff;
 }
